--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,10 @@
                 </div>
                 <div class="header-nav">
                     <ul>
-                        <li>Главная</li>
-                        <li>Каталог</li>
-                        <li>Исполнители</li>
-                        <li>Контакты</li>
+                        <li><a href="./index.html"">Главная</a></li>
+                        <li><a href="">Каталог</a></li>
+                        <li><a href="./artist.html">Исполнители</a></li>
+                        <li><a href="">Контакты</a></li>
                     </ul>
                 </div>
             <!-- </div> -->
